--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ message(STATUS "Using Python include dirs: ${PYTHON_INCLUDE_DIRS}")
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/bindings/include
     ${CMAKE_CURRENT_SOURCE_DIR}/bindings/include/scopemux
+    ${TS_CORE_INCLUDE_DIR}
     ${PYTHON_INCLUDE_DIRS}
 )
 
@@ -35,10 +36,50 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(pybind11)
 
+# Define Tree-sitter core library
+set(TS_CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor/tree-sitter/lib/src)
+set(TS_CORE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor/tree-sitter/lib/include)
+
+# Define Tree-sitter grammar sources
+set(TS_C_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor/tree-sitter-c/src)
+set(TS_CPP_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor/tree-sitter-cpp/src)
+set(TS_PYTHON_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor/tree-sitter-python/src)
+
+# Tree-sitter core sources
+set(TS_CORE_SOURCES
+    ${TS_CORE_DIR}/alloc.c
+    ${TS_CORE_DIR}/language.c
+    ${TS_CORE_DIR}/lexer.c
+    ${TS_CORE_DIR}/node.c
+    ${TS_CORE_DIR}/parser.c
+    ${TS_CORE_DIR}/tree.c
+    ${TS_CORE_DIR}/tree_cursor.c
+)
+
+# Tree-sitter grammar sources
+set(TS_GRAMMAR_SOURCES
+    ${TS_C_SRC_DIR}/parser.c
+    ${TS_CPP_SRC_DIR}/parser.c
+    ${TS_CPP_SRC_DIR}/scanner.cc
+    ${TS_PYTHON_SRC_DIR}/parser.c
+    ${TS_PYTHON_SRC_DIR}/scanner.c
+)
+
 # Define source files
 set(SCOPEMUX_SOURCES
     bindings/src/bindings/module.c
     bindings/src/bindings/parser_bindings.c
+    bindings/src/parser/parser.c
+    bindings/src/parser/tree_sitter_integration.c
+    bindings/src/parser/ir_generator.c
+    bindings/src/context_engine/compressor.c
+    bindings/src/context_engine/expander.c
+    bindings/src/context_engine/token_budgeter.c
+    bindings/src/common/error_handling.c
+    bindings/src/common/logging.c
+    bindings/src/common/memory_management.c
+    ${TS_CORE_SOURCES}
+    ${TS_GRAMMAR_SOURCES}
 )
 
 # Python bindings module
@@ -48,6 +89,7 @@ pybind11_add_module(scopemux_core ${SCOPEMUX_SOURCES})
 target_include_directories(scopemux_core PRIVATE 
     ${CMAKE_CURRENT_SOURCE_DIR}/bindings/include
     ${CMAKE_CURRENT_SOURCE_DIR}/bindings/include/scopemux
+    ${TS_CORE_INCLUDE_DIR}
     ${PYTHON_INCLUDE_DIRS}
 )
 
