add linting and c properties json file

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ bindings/build/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/c_cpp_properties.json
 .idea/
 *.swp
 *.swo
