update bindings project, add the initial test suite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,18 @@
 cmake_minimum_required(VERSION 3.10)
-project(scopemux VERSION 0.1.0 LANGUAGES C)
+
+# Set CMake policy version to ensure compatibility with dependencies like pybind11
+# This should be set before the project() call.
+if(POLICY CMP0048)
+    cmake_policy(SET CMP0048 NEW) # Handles project() version format
+endif()
+if(POLICY CMP0148)
+    cmake_policy(SET CMP0148 NEW) # Handles modern Python discovery (FindPythonInterp/FindPythonLibs removal)
+endif()
+if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.5") # Check if CMAKE_POLICY_VERSION_MINIMUM is supported
+    set(CMAKE_POLICY_VERSION_MINIMUM 3.10) # Match our project's minimum
+endif()
+
+project(scopemux VERSION 0.1.0 LANGUAGES C CXX)
 
 # Set C standard
 set(CMAKE_C_STANDARD 11)
@@ -10,9 +23,18 @@ if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
 endif()
 
-# Specify Python include directories directly
-set(PYTHON_INCLUDE_DIRS "/home/matrillo/.pyenv/versions/scopemux/include/python3.10")
+# Find Python packages needed for the project
+find_package(Python 3.10 REQUIRED COMPONENTS Interpreter Development)
+
+# If find_package doesn't work properly, use the known system include path
+if(NOT Python_INCLUDE_DIRS)
+    set(PYTHON_INCLUDE_DIRS "/usr/include/python3.10")
+else()
+    set(PYTHON_INCLUDE_DIRS ${Python_INCLUDE_DIRS})
+endif()
+
 message(STATUS "Using Python include dirs: ${PYTHON_INCLUDE_DIRS}")
+
 
 # Include directories
 include_directories(
@@ -60,7 +82,7 @@ set(TS_CORE_SOURCES
 set(TS_GRAMMAR_SOURCES
     ${TS_C_SRC_DIR}/parser.c
     ${TS_CPP_SRC_DIR}/parser.c
-    ${TS_CPP_SRC_DIR}/scanner.cc
+    ${TS_CPP_SRC_DIR}/scanner.c
     ${TS_PYTHON_SRC_DIR}/parser.c
     ${TS_PYTHON_SRC_DIR}/scanner.c
 )
@@ -92,6 +114,11 @@ target_include_directories(scopemux_core PRIVATE
     ${TS_CORE_INCLUDE_DIR}
     ${PYTHON_INCLUDE_DIRS}
 )
+
+# Add the test suite subdirectory
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/bindings/tests/CMakeLists.txt")
+    add_subdirectory(bindings/tests)
+endif()
 
 # Installation rules
 install(TARGETS scopemux_core DESTINATION ${CMAKE_INSTALL_PREFIX})
