--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
     "files.associations": {
       "*.h": "c",
       "*.hpp": "cpp"
-    }
+    },
+    "clangd.arguments": [
+      "--header-insertion=never",
+      "--diagnostic-filter=-pragma*visibility*"
+    ]
 }
