the first c parsing test is now passing, debug statements still remain

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,8 @@
     ".gitmodules": true,
     ".python-version": true,
     "build": true,
+    "vendor": true,
+    "core/build": true,
+    "core/scopemux_core.egg-info": true
   }
 }
