save point, the generate_expected_json script now imports the python bindings

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -115,6 +115,7 @@ pybind11_add_module(scopemux_core
     src/bindings/module.c
     src/bindings/parser_bindings.c
     src/bindings/context_engine_bindings.c
+    src/context_engine/context_engine.c
 )
 
 # Link libraries to the Python module
